--- a/DX11 Framework.vcxproj.filters
+++ b/DX11 Framework.vcxproj.filters
@@ -12,22 +12,185 @@
     <Filter Include="Resource Files\Textures">
       <UniqueIdentifier>{84a4d56f-682d-4b12-a7c9-064cc08bce09}</UniqueIdentifier>
     </Filter>
+    <Filter Include="HeaderFiles">
+      <UniqueIdentifier>{d7640ca2-d961-4125-95af-c55a04fbdf2b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SourceFiles">
+      <UniqueIdentifier>{b0bcf341-ef8b-4c30-83c6-ce4b03f666dc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="HeaderFiles\External">
+      <UniqueIdentifier>{5962c10c-f0a6-453e-928e-285197243280}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SourceFiles\External">
+      <UniqueIdentifier>{e37ee9f4-de0a-4985-a173-c711902f1113}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="HeaderFiles\Scene">
+      <UniqueIdentifier>{3bec4a72-7bbf-4aa3-9313-f5871d618ea4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SourceFiles\Scene">
+      <UniqueIdentifier>{4bc6fb5e-a3f8-4583-88d3-ba085f122969}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="HeaderFiles\Math">
+      <UniqueIdentifier>{11b709c3-035d-4f0b-9889-21e414742cd3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="IMGui">
+      <UniqueIdentifier>{89c31164-b78e-4280-a27e-78ac99460697}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="HeaderFiles\Physics">
+      <UniqueIdentifier>{6d904e93-eb6b-45bc-a8e4-229b83f0eb20}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="HeaderFiles\DX11">
+      <UniqueIdentifier>{835ce5e8-f05b-47dd-803b-60a6eb9f87cc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="HeaderFiles\Components">
+      <UniqueIdentifier>{1194a403-f66f-43c4-8922-880cc13174f5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="HeaderFiles\Structures">
+      <UniqueIdentifier>{f8da4b19-3732-4d51-b649-905ce6e69c13}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SourceFiles\DX11">
+      <UniqueIdentifier>{01fec4ca-5d36-472e-a7f7-0916bf4b637c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SourceFiles\Components">
+      <UniqueIdentifier>{fc952b14-7095-4ce4-b9b9-808aaa28a00d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Application.h" />
-    <ClInclude Include="GameObject.h" />
-    <ClInclude Include="DDSTextureLoader.h" />
-    <ClInclude Include="Camera.h" />
-    <ClInclude Include="OBJLoader.h" />
-    <ClInclude Include="Structures.h" />
+    <ClInclude Include="Application.h">
+      <Filter>HeaderFiles</Filter>
+    </ClInclude>
+    <ClInclude Include="DDSTextureLoader.h">
+      <Filter>HeaderFiles\External</Filter>
+    </ClInclude>
+    <ClInclude Include="OBJLoader.h">
+      <Filter>HeaderFiles\External</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>HeaderFiles\External</Filter>
+    </ClInclude>
+    <ClInclude Include="Structures.h">
+      <Filter>HeaderFiles</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneManager.h">
+      <Filter>HeaderFiles\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="IMGui\imconfig.h">
+      <Filter>IMGui</Filter>
+    </ClInclude>
+    <ClInclude Include="IMGui\imgui.h">
+      <Filter>IMGui</Filter>
+    </ClInclude>
+    <ClInclude Include="IMGui\imgui_impl_dx11.h">
+      <Filter>IMGui</Filter>
+    </ClInclude>
+    <ClInclude Include="IMGui\imgui_impl_win32.h">
+      <Filter>IMGui</Filter>
+    </ClInclude>
+    <ClInclude Include="IMGui\imgui_internal.h">
+      <Filter>IMGui</Filter>
+    </ClInclude>
+    <ClInclude Include="IMGui\imstb_rectpack.h">
+      <Filter>IMGui</Filter>
+    </ClInclude>
+    <ClInclude Include="IMGui\imstb_textedit.h">
+      <Filter>IMGui</Filter>
+    </ClInclude>
+    <ClInclude Include="IMGui\imstb_truetype.h">
+      <Filter>IMGui</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene0.h">
+      <Filter>HeaderFiles\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="CameraComponent.h">
+      <Filter>HeaderFiles\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="ConstantStructure.h">
+      <Filter>HeaderFiles\Structures</Filter>
+    </ClInclude>
+    <ClInclude Include="DirectX.h">
+      <Filter>HeaderFiles\DX11</Filter>
+    </ClInclude>
+    <ClInclude Include="IMGuiManager.h">
+      <Filter>IMGui</Filter>
+    </ClInclude>
+    <ClInclude Include="Lighting.h">
+      <Filter>HeaderFiles\Structures</Filter>
+    </ClInclude>
+    <ClInclude Include="Materials.h">
+      <Filter>HeaderFiles\Structures</Filter>
+    </ClInclude>
+    <ClInclude Include="Mesh.h">
+      <Filter>HeaderFiles\Structures</Filter>
+    </ClInclude>
+    <ClInclude Include="Object.h">
+      <Filter>HeaderFiles\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="PixelShader.h">
+      <Filter>HeaderFiles\DX11</Filter>
+    </ClInclude>
+    <ClInclude Include="Render.h">
+      <Filter>HeaderFiles\DX11</Filter>
+    </ClInclude>
+    <ClInclude Include="ShaderCompiler.h">
+      <Filter>HeaderFiles\DX11</Filter>
+    </ClInclude>
+    <ClInclude Include="Vertex.h">
+      <Filter>HeaderFiles\Structures</Filter>
+    </ClInclude>
+    <ClInclude Include="StaticCamera.h">
+      <Filter>HeaderFiles\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Surface.h">
+      <Filter>HeaderFiles\Structures</Filter>
+    </ClInclude>
+    <ClInclude Include="TextureComponent.h">
+      <Filter>HeaderFiles\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Transformation.h">
+      <Filter>HeaderFiles\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="VertexShader.h">
+      <Filter>HeaderFiles\DX11</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Application.cpp" />
-    <ClCompile Include="GameObject.cpp" />
-    <ClCompile Include="DDSTextureLoader.cpp" />
-    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="OBJLoader.cpp" />
+    <ClCompile Include="Application.cpp">
+      <Filter>SourceFiles</Filter>
+    </ClCompile>
+    <ClCompile Include="OBJLoader.cpp">
+      <Filter>SourceFiles\External</Filter>
+    </ClCompile>
+    <ClCompile Include="DDSTextureLoader.cpp">
+      <Filter>SourceFiles\External</Filter>
+    </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>SourceFiles</Filter>
+    </ClCompile>
+    <ClCompile Include="IMGui\imgui.cpp">
+      <Filter>IMGui</Filter>
+    </ClCompile>
+    <ClCompile Include="IMGui\imgui_draw.cpp">
+      <Filter>IMGui</Filter>
+    </ClCompile>
+    <ClCompile Include="IMGui\imgui_impl_dx11.cpp">
+      <Filter>IMGui</Filter>
+    </ClCompile>
+    <ClCompile Include="IMGui\imgui_impl_win32.cpp">
+      <Filter>IMGui</Filter>
+    </ClCompile>
+    <ClCompile Include="IMGui\imgui_tables.cpp">
+      <Filter>IMGui</Filter>
+    </ClCompile>
+    <ClCompile Include="IMGui\imgui_widgets.cpp">
+      <Filter>IMGui</Filter>
+    </ClCompile>
+    <ClCompile Include="DirectX.cpp">
+      <Filter>SourceFiles\DX11</Filter>
+    </ClCompile>
+    <ClCompile Include="TextureComponent.cpp">
+      <Filter>SourceFiles\Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CLInclude Include="resource.h">
@@ -51,8 +214,5 @@
     <Image Include="Resources\stone.dds">
       <Filter>Resource Files\Textures</Filter>
     </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
