--- a/DX11 Framework.vcxproj.filters
+++ b/DX11 Framework.vcxproj.filters
@@ -152,6 +152,12 @@
     <ClInclude Include="VertexShader.h">
       <Filter>HeaderFiles\DX11</Filter>
     </ClInclude>
+    <ClInclude Include="Vector.h">
+      <Filter>HeaderFiles\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="VectorNote.h">
+      <Filter>HeaderFiles\Math</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
