--- a/DX11 Framework.vcxproj.filters
+++ b/DX11 Framework.vcxproj.filters
@@ -158,6 +158,12 @@
     <ClInclude Include="VectorNote.h">
       <Filter>HeaderFiles\Math</Filter>
     </ClInclude>
+    <ClInclude Include="Matrix.h">
+      <Filter>HeaderFiles\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Quanternion.h">
+      <Filter>HeaderFiles\Math</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
