Bodies are now fully rendered, howeever textures are not loading ,this is not an issue as of now , continue.

--- a/DX11 Framework.vcxproj.filters
+++ b/DX11 Framework.vcxproj.filters
@@ -113,9 +113,6 @@
     <ClInclude Include="IMGuiManager.h">
       <Filter>IMGui</Filter>
     </ClInclude>
-    <ClInclude Include="Lighting.h">
-      <Filter>HeaderFiles\Structures</Filter>
-    </ClInclude>
     <ClInclude Include="Materials.h">
       <Filter>HeaderFiles\Structures</Filter>
     </ClInclude>
@@ -163,6 +160,12 @@
     </ClInclude>
     <ClInclude Include="Quanternion.h">
       <Filter>HeaderFiles\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Shape.h">
+      <Filter>HeaderFiles\Physics</Filter>
+    </ClInclude>
+    <ClInclude Include="Lighting.h">
+      <Filter>HeaderFiles\Structures</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
