--- a/DX11 Framework.vcxproj
+++ b/DX11 Framework.vcxproj
@@ -395,6 +395,7 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CameraComponent.h" />
+    <ClInclude Include="Collision.h" />
     <ClInclude Include="ConstantStructure.h" />
     <ClInclude Include="DDSTextureLoader.h" />
     <ClInclude Include="DirectX.h" />
