Could be correct poentially, however some clipping and teleporting issues. Refactor then check over code again

--- a/DX11 Framework.vcxproj
+++ b/DX11 Framework.vcxproj
@@ -396,6 +396,7 @@
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="Bounds.h" />
+    <ClInclude Include="BroadNarrowPhase.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CameraComponent.h" />
     <ClInclude Include="Collision.h" />
