--- a/DX11 Framework.vcxproj.filters
+++ b/DX11 Framework.vcxproj.filters
@@ -176,6 +176,9 @@
     <ClInclude Include="Bounds.h">
       <Filter>HeaderFiles\Physics</Filter>
     </ClInclude>
+    <ClInclude Include="BroadNarrowPhase.h">
+      <Filter>HeaderFiles\Physics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
