Continue Page 6 Programming Tomorrow.
Continue ShapeBox Support Function

--- a/DX11 Framework.vcxproj
+++ b/DX11 Framework.vcxproj
@@ -388,6 +388,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="OBJLoader.cpp" />
     <ClCompile Include="Scene0.cpp" />
+    <ClCompile Include="ShapeBox.cpp" />
     <ClCompile Include="ShapeSphere.cpp" />
     <ClCompile Include="TextureComponent.cpp" />
   </ItemGroup>
@@ -431,6 +432,7 @@
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="ShaderCompiler.h" />
     <ClInclude Include="Shape.h" />
+    <ClInclude Include="ShapeBox.h" />
     <ClInclude Include="ShapeSphere.h" />
     <ClInclude Include="StaticCamera.h" />
     <ClInclude Include="Structures.h" />
