--- a/DX11 Framework.vcxproj.filters
+++ b/DX11 Framework.vcxproj.filters
@@ -188,6 +188,9 @@
     <ClInclude Include="Body.h">
       <Filter>HeaderFiles\Physics</Filter>
     </ClInclude>
+    <ClInclude Include="ShapeBox.h">
+      <Filter>HeaderFiles\Physics\Shapes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
@@ -244,6 +247,9 @@
     </ClCompile>
     <ClCompile Include="Collision.cpp">
       <Filter>SourceFiles\Physics</Filter>
+    </ClCompile>
+    <ClCompile Include="ShapeBox.cpp">
+      <Filter>SourceFiles\Physics\Shape</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
